fixed alignment

--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@ body{
 }
 
 .container{
+    
+    width: 95%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
